syntax = "proto3";

package leaderboard.pb;
option go_package = "leaderboard/api;pb";

import "google/api/annotations.proto";
import "leaderboard/api/message.proto";

service LeaderboardService {
  rpc GetTopK (GetTopKRequest) returns (GetLeaderboardResponse) {
    option (google.api.http) = {
      get: "/v1/leaderboard/{appId}/{leaderboardName}"
    };
  };
  rpc GetMToN (GetMToNRequest) returns (GetLeaderboardResponse) {
    option (google.api.http) = {
      get: "/v1/leaderboard/{appId}/{leaderboardName}"
    };
  };
  rpc GetIdRank (GetIdRankRequest) returns (GetIdRankResponse) {
    option (google.api.http) = {
      get: "/v1/leaderboard/{appId}/{leaderboardName}/{id}"
    };
  };
  rpc GetLeaderBoardSize (LeaderboardRequest) returns (GetLeaderBoardSizeResponse) {
    option (google.api.http) = {
      get: "/v1/leaderboard/{appId}/{leaderboardName}/size"
    };
  };
  rpc UpdateScore (UpdateScoreRequest) returns (NothingResponse) {
    option (google.api.http) = {
      post: "/v1/leaderboard"
      body: "*"
    };
  };
  rpc DeleteMember (GetIdRankRequest) returns (NothingResponse) {
    option (google.api.http) = {
      delete: "/v1/leaderboard/{appId}/{leaderboardName}/{id}"
    };
  };
  rpc NewLeaderboard (NewLeaderboardRequest) returns (NothingResponse) {
    option (google.api.http) = {
      put: "/v1/leaderboard"
      body: "*"
    };
  };
  rpc ResetLeaderboard (LeaderboardRequest) returns (NothingResponse) {
    option (google.api.http) = {
      post: "/v1/leaderboard/reset"
      body: "*"
    };
  };
}
